<resources>

    <string name="application_name">VM Movie App</string>
    <string name="no_connection">There is no internet connection</string>
    <string name="sort_by_key">sort_by_key</string>
    <string name="API_KEY">474ef283dc3c293fc855a8e09ad74a52</string>
    <string name="favorite">Favorite</string>
    <string name="most_popular_pref">most_popular</string>
    <string name="highest_rated_pref">highest_rated</string>

    <string name="most_popular_pref_entry">Most Popular</string>
    <string name="highest_rated_pref_entry">Highest Rated</string>

    <string name="settings">Settings</string>

    <string name="sort_by_pref_title">Sort By</string>


    <string-array name="sort_by_pref_entry_array">
        <item>@string/most_popular_pref_entry</item>
        <item>@string/highest_rated_pref_entry</item>
    </string-array>

    <string-array name="sort_by_pref_values_array">
        <item>@string/most_popular_pref</item>
        <item>@string/highest_rated_pref</item>
    </string-array>

    <string name="title_activity_settings">Settings</string>
    <string name="Details_Activity_title">Details Activity</string>
    <string name="detail_error_message">Error while take the data</string>
    <string name="original_title">Original Title</string>
    <string name="overview">Overview</string>
    <string name="rate_movie">Rate Movie</string>
    <string name="release_date">Release Date</string>
    <string name="see_reviews">Reviews</string>
    <string name="see_video">Watch video</string>
    <string name="trailer">Trailer</string>
    <string name="no_reviews">Sorry no Reviews for this movie</string>
    <string name="author">author</string>
    <string name="content">content</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="configure">Configure</string>
    <string name="display_information">Favorite List</string>
    <string name="ingredient">Movies</string>


</resources>
