<?xml version="1.0" encoding="utf-8"?><!--make the screen scrollable for small screen size-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/buttoncontainer"
    tools:context=".UI.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Details_Activity_title"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/size21" />

                <TextView
                    android:id="@+id/no_internet_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_red_dark"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/no_connection"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textViewSize"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/ImageViewHight">

            <!--movie poster image thumbnail-->
            <ImageView
                android:id="@+id/image_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="@dimen/ImageViewMarginBotom"
                android:adjustViewBounds="true"
                android:contentDescription="@string/application_name"
                android:scaleType="centerCrop"
                android:src="@color/buttoncontainer" />

            <ImageButton
                android:id="@+id/favorite_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/marge15"
                android:background="@drawable/bg_shape_white"
                android:contentDescription="@string/application_name"
                android:onClick="AddToBeFavorite"
                android:padding="@dimen/pading10"
                android:src="@drawable/ic_favorite" />

            <ImageButton
                android:id="@+id/favorite_img2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/marge15"
                android:background="@drawable/bg_shape_red"
                android:contentDescription="@string/application_name"
                android:onClick="RemoveFromFavorite"
                android:padding="@dimen/pading10"
                android:src="@drawable/ic_favorite2"
                android:visibility="gone" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/bg_transparent_gradient">

                <TextView
                    android:id="@+id/original_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marge15"
                    android:layout_marginBottom="@dimen/TextViewMarginBotom"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/size16"
                    android:textStyle="bold" />
            </FrameLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/contentView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/marge15"
            android:orientation="vertical">

            <TextView
                android:id="@+id/overview_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/TextViewMarginBotom"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pading10"
                android:layout_marginBottom="@dimen/pading10"
                android:orientation="horizontal">

                <!--release date-->
                <TextView
                    android:id="@+id/release_date_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/TextViewMarginBotom"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_event_note_black_24dp"
                    android:drawablePadding="@dimen/margin_5"
                    android:textColor="@android:color/white" />

                <!--vote_average in the api-->
                <TextView
                    android:id="@+id/rating_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/TextViewMarginBotom"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_star_half_black_24dp"
                    android:drawablePadding="@dimen/margin_5"
                    android:textColor="@android:color/white" />
            </LinearLayout>


        </LinearLayout>

        <Button
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_5"
            android:layout_marginBottom="@dimen/TextViewMarginBotom"
            android:background="@drawable/bg_shape_blue"
            android:onClick="DisplayReviews"
            android:text="@string/see_reviews"
            android:textColor="@android:color/white" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marge15" />

        <TextView
            android:id="@+id/Reviewed_adapter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marge15"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textViewSize"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="20dp"
                android:background="@drawable/bg_shape_green"
                android:onClick="DisplayVideo"
                android:padding="@dimen/pading10"
                android:text="@string/see_video"
                android:textColor="@android:color/white" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>
